--- a/ui/package.json
+++ b/ui/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "next": "9.4.4",
+    "nookies": "^2.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10"
@@ -19,6 +23,10 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.19",
     "@types/react": "^16.9.41",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
     "typescript": "^3.9.6"
   }
 }
